[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openclaw-sap-gate"
version = "1.0.0"
description = "SAFE Authorization Protocol for MCP tool calls — SAP/1.0 reference implementation"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Sean Campbell" }]
requires-python = ">=3.11"
keywords = ["mcp", "authorization", "gpg", "sap", "openclaw", "security"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]

[project.scripts]
sap-gate = "openclaw_sap_gate.cli:main"

[project.urls]
Homepage = "https://github.com/rudi193-cmd/openclaw-sap-gate"
RFC = "https://github.com/rudi193-cmd/sap-rfc"

[tool.hatch.build.targets.wheel]
packages = ["src/openclaw_sap_gate"]

[tool.pytest.ini_options]
testpaths = ["tests"]
